fix: header menu had same z-index as other popover menus

--- a/src/components/shared/Header.scss
+++ b/src/components/shared/Header.scss
@@ -66,6 +66,8 @@
 }
 
 .Header__context-menu {
+  z-index: 1000;
+
   .PopoverMenu__button {
     border: 1px solid $grey200;
     border-radius: 8px;
